--- a/Basic Neural Network.ipynb
+++ b/Basic Neural Network.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e7b1f1dd",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6670e7d0",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "342fccaf",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "18693924",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "9118cd41",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cc927d98",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "8c651bbe",
    "metadata": {},
    "outputs": [],
@@ -162,8 +162,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "298c2d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "24/24 [==============================] - 0s 926us/step - loss: 0.6969 - accuracy: 0.4893\n",
+      "Epoch 2/100\n",
+      "24/24 [==============================] - 0s 954us/step - loss: 0.6866 - accuracy: 0.6747\n",
+      "Epoch 3/100\n",
+      "24/24 [==============================] - 0s 820us/step - loss: 0.6761 - accuracy: 0.5067\n",
+      "Epoch 4/100\n",
+      "24/24 [==============================] - 0s 997us/step - loss: 0.6644 - accuracy: 0.6893\n",
+      "Epoch 5/100\n",
+      "24/24 [==============================] - 0s 1ms/step - loss: 0.6516 - accuracy: 0.9960\n",
+      "Epoch 6/100\n",
+      "24/24 [==============================] - 0s 954us/step - loss: 0.6379 - accuracy: 0.9960\n",
+      "Epoch 7/100\n",
+      "24/24 [==============================] - 0s 1ms/step - loss: 0.6232 - accuracy: 0.9960\n",
+      "Epoch 8/100\n",
+      "24/24 [==============================] - 0s 874us/step - loss: 0.6083 - accuracy: 0.9960\n",
+      "Epoch 9/100\n",
+      "24/24 [==============================] - 0s 886us/step - loss: 0.5924 - accuracy: 0.9960\n",
+      "Epoch 10/100\n",
+      "24/24 [==============================] - 0s 1ms/step - loss: 0.5766 - accuracy: 0.9960\n",
+      "Epoch 11/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.5607 - accuracy: 0.9960\n",
+      "Epoch 12/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.5446 - accuracy: 0.9960\n",
+      "Epoch 13/100\n",
+      "24/24 [==============================] - 0s 999us/step - loss: 0.5286 - accuracy: 0.9960\n",
+      "Epoch 14/100\n",
+      "24/24 [==============================] - 0s 866us/step - loss: 0.5127 - accuracy: 0.9960\n",
+      "Epoch 15/100\n",
+      "24/24 [==============================] - 0s 911us/step - loss: 0.4972 - accuracy: 0.9960\n",
+      "Epoch 16/100\n",
+      "24/24 [==============================] - 0s 953us/step - loss: 0.4819 - accuracy: 0.9960\n",
+      "Epoch 17/100\n",
+      "24/24 [==============================] - 0s 868us/step - loss: 0.4671 - accuracy: 0.9960\n",
+      "Epoch 18/100\n",
+      "24/24 [==============================] - ETA: 0s - loss: 0.4692 - accuracy: 1.00 - 0s 909us/step - loss: 0.4526 - accuracy: 0.9960\n",
+      "Epoch 19/100\n",
+      "24/24 [==============================] - 0s 911us/step - loss: 0.4387 - accuracy: 0.9960\n",
+      "Epoch 20/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.4252 - accuracy: 0.9960\n",
+      "Epoch 21/100\n",
+      "24/24 [==============================] - 0s 1ms/step - loss: 0.4121 - accuracy: 0.9960\n",
+      "Epoch 22/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.3996 - accuracy: 0.9960\n",
+      "Epoch 23/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.3876 - accuracy: 0.9960\n",
+      "Epoch 24/100\n",
+      "24/24 [==============================] - 0s 991us/step - loss: 0.3760 - accuracy: 0.9960\n",
+      "Epoch 25/100\n",
+      "24/24 [==============================] - 0s 843us/step - loss: 0.3649 - accuracy: 0.9960\n",
+      "Epoch 26/100\n",
+      "24/24 [==============================] - 0s 911us/step - loss: 0.3542 - accuracy: 0.9960\n",
+      "Epoch 27/100\n",
+      "24/24 [==============================] - 0s 954us/step - loss: 0.3440 - accuracy: 0.9960\n",
+      "Epoch 28/100\n",
+      "24/24 [==============================] - 0s 912us/step - loss: 0.3342 - accuracy: 0.9960\n",
+      "Epoch 29/100\n",
+      "24/24 [==============================] - 0s 954us/step - loss: 0.3249 - accuracy: 0.9960\n",
+      "Epoch 30/100\n",
+      "24/24 [==============================] - 0s 1ms/step - loss: 0.3159 - accuracy: 0.9960\n",
+      "Epoch 31/100\n",
+      "24/24 [==============================] - 0s 911us/step - loss: 0.3073 - accuracy: 0.9960\n",
+      "Epoch 32/100\n",
+      "24/24 [==============================] - 0s 1ms/step - loss: 0.2990 - accuracy: 0.9960\n",
+      "Epoch 33/100\n",
+      "24/24 [==============================] - 0s 824us/step - loss: 0.2910 - accuracy: 0.9960\n",
+      "Epoch 34/100\n",
+      "24/24 [==============================] - 0s 737us/step - loss: 0.2834 - accuracy: 0.9960\n",
+      "Epoch 35/100\n",
+      "24/24 [==============================] - 0s 911us/step - loss: 0.2761 - accuracy: 0.9960\n",
+      "Epoch 36/100\n",
+      "24/24 [==============================] - 0s 787us/step - loss: 0.2690 - accuracy: 0.9960\n",
+      "Epoch 37/100\n",
+      "24/24 [==============================] - 0s 825us/step - loss: 0.2623 - accuracy: 0.9960\n",
+      "Epoch 38/100\n",
+      "24/24 [==============================] - 0s 955us/step - loss: 0.2557 - accuracy: 0.9960\n",
+      "Epoch 39/100\n",
+      "24/24 [==============================] - 0s 781us/step - loss: 0.2494 - accuracy: 0.9960\n",
+      "Epoch 40/100\n",
+      "24/24 [==============================] - 0s 781us/step - loss: 0.2434 - accuracy: 0.9960\n",
+      "Epoch 41/100\n",
+      "24/24 [==============================] - 0s 914us/step - loss: 0.2375 - accuracy: 0.9960\n",
+      "Epoch 42/100\n",
+      "24/24 [==============================] - 0s 825us/step - loss: 0.2319 - accuracy: 0.9960\n",
+      "Epoch 43/100\n",
+      "24/24 [==============================] - 0s 809us/step - loss: 0.2265 - accuracy: 0.9960\n",
+      "Epoch 44/100\n",
+      "24/24 [==============================] - 0s 954us/step - loss: 0.2212 - accuracy: 0.9960\n",
+      "Epoch 45/100\n",
+      "24/24 [==============================] - 0s 824us/step - loss: 0.2162 - accuracy: 0.9960\n",
+      "Epoch 46/100\n",
+      "24/24 [==============================] - 0s 737us/step - loss: 0.2113 - accuracy: 0.9960\n",
+      "Epoch 47/100\n",
+      "24/24 [==============================] - 0s 911us/step - loss: 0.2065 - accuracy: 0.9960\n",
+      "Epoch 48/100\n",
+      "24/24 [==============================] - 0s 737us/step - loss: 0.2020 - accuracy: 0.9960\n",
+      "Epoch 49/100\n",
+      "24/24 [==============================] - 0s 781us/step - loss: 0.1975 - accuracy: 0.9960\n",
+      "Epoch 50/100\n",
+      "24/24 [==============================] - 0s 954us/step - loss: 0.1932 - accuracy: 0.9973\n",
+      "Epoch 51/100\n",
+      "24/24 [==============================] - 0s 781us/step - loss: 0.1891 - accuracy: 0.9973\n",
+      "Epoch 52/100\n",
+      "24/24 [==============================] - 0s 763us/step - loss: 0.1851 - accuracy: 0.9973\n",
+      "Epoch 53/100\n",
+      "24/24 [==============================] - 0s 997us/step - loss: 0.1812 - accuracy: 0.9987\n",
+      "Epoch 54/100\n",
+      "24/24 [==============================] - 0s 824us/step - loss: 0.1774 - accuracy: 1.0000\n",
+      "Epoch 55/100\n",
+      "24/24 [==============================] - 0s 824us/step - loss: 0.1738 - accuracy: 1.0000\n",
+      "Epoch 56/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.1702 - accuracy: 1.0000\n",
+      "Epoch 57/100\n",
+      "24/24 [==============================] - 0s 738us/step - loss: 0.1667 - accuracy: 1.0000\n",
+      "Epoch 58/100\n",
+      "24/24 [==============================] - 0s 781us/step - loss: 0.1634 - accuracy: 1.0000\n",
+      "Epoch 59/100\n",
+      "24/24 [==============================] - 0s 990us/step - loss: 0.1601 - accuracy: 1.0000\n",
+      "Epoch 60/100\n",
+      "24/24 [==============================] - 0s 780us/step - loss: 0.1569 - accuracy: 1.0000\n",
+      "Epoch 61/100\n",
+      "24/24 [==============================] - 0s 744us/step - loss: 0.1538 - accuracy: 1.0000\n",
+      "Epoch 62/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.1508 - accuracy: 1.0000\n",
+      "Epoch 63/100\n",
+      "24/24 [==============================] - 0s 738us/step - loss: 0.1479 - accuracy: 1.0000\n",
+      "Epoch 64/100\n",
+      "24/24 [==============================] - 0s 779us/step - loss: 0.1451 - accuracy: 1.0000\n",
+      "Epoch 65/100\n",
+      "24/24 [==============================] - 0s 1ms/step - loss: 0.1423 - accuracy: 1.0000\n",
+      "Epoch 66/100\n",
+      "24/24 [==============================] - 0s 911us/step - loss: 0.1396 - accuracy: 1.0000\n",
+      "Epoch 67/100\n",
+      "24/24 [==============================] - 0s 780us/step - loss: 0.1370 - accuracy: 1.0000\n",
+      "Epoch 68/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.1344 - accuracy: 1.0000\n",
+      "Epoch 69/100\n",
+      "24/24 [==============================] - 0s 737us/step - loss: 0.1319 - accuracy: 1.0000\n",
+      "Epoch 70/100\n",
+      "24/24 [==============================] - 0s 781us/step - loss: 0.1295 - accuracy: 1.0000\n",
+      "Epoch 71/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.1272 - accuracy: 1.0000\n",
+      "Epoch 72/100\n",
+      "24/24 [==============================] - 0s 737us/step - loss: 0.1248 - accuracy: 1.0000\n",
+      "Epoch 73/100\n",
+      "24/24 [==============================] - 0s 780us/step - loss: 0.1226 - accuracy: 1.0000\n",
+      "Epoch 74/100\n",
+      "24/24 [==============================] - 0s 823us/step - loss: 0.1204 - accuracy: 1.0000\n",
+      "Epoch 75/100\n",
+      "24/24 [==============================] - 0s 782us/step - loss: 0.1183 - accuracy: 1.0000\n",
+      "Epoch 76/100\n",
+      "24/24 [==============================] - 0s 781us/step - loss: 0.1161 - accuracy: 1.0000\n",
+      "Epoch 77/100\n",
+      "24/24 [==============================] - 0s 824us/step - loss: 0.1141 - accuracy: 1.0000\n",
+      "Epoch 78/100\n",
+      "24/24 [==============================] - 0s 841us/step - loss: 0.1121 - accuracy: 1.0000\n",
+      "Epoch 79/100\n",
+      "24/24 [==============================] - 0s 781us/step - loss: 0.1102 - accuracy: 1.0000\n",
+      "Epoch 80/100\n",
+      "24/24 [==============================] - 0s 782us/step - loss: 0.1083 - accuracy: 1.0000\n",
+      "Epoch 81/100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24/24 [==============================] - 0s 829us/step - loss: 0.1064 - accuracy: 1.0000\n",
+      "Epoch 82/100\n",
+      "24/24 [==============================] - 0s 738us/step - loss: 0.1046 - accuracy: 1.0000\n",
+      "Epoch 83/100\n",
+      "24/24 [==============================] - 0s 737us/step - loss: 0.1028 - accuracy: 1.0000\n",
+      "Epoch 84/100\n",
+      "24/24 [==============================] - 0s 844us/step - loss: 0.1011 - accuracy: 1.0000\n",
+      "Epoch 85/100\n",
+      "24/24 [==============================] - 0s 738us/step - loss: 0.0994 - accuracy: 1.0000\n",
+      "Epoch 86/100\n",
+      "24/24 [==============================] - 0s 780us/step - loss: 0.0978 - accuracy: 1.0000\n",
+      "Epoch 87/100\n",
+      "24/24 [==============================] - 0s 867us/step - loss: 0.0961 - accuracy: 1.0000\n",
+      "Epoch 88/100\n",
+      "24/24 [==============================] - 0s 780us/step - loss: 0.0946 - accuracy: 1.0000\n",
+      "Epoch 89/100\n",
+      "24/24 [==============================] - 0s 737us/step - loss: 0.0930 - accuracy: 1.0000\n",
+      "Epoch 90/100\n",
+      "24/24 [==============================] - 0s 780us/step - loss: 0.0915 - accuracy: 1.0000\n",
+      "Epoch 91/100\n",
+      "24/24 [==============================] - 0s 824us/step - loss: 0.0900 - accuracy: 1.0000\n",
+      "Epoch 92/100\n",
+      "24/24 [==============================] - 0s 810us/step - loss: 0.0885 - accuracy: 1.0000\n",
+      "Epoch 93/100\n",
+      "24/24 [==============================] - 0s 781us/step - loss: 0.0871 - accuracy: 1.0000\n",
+      "Epoch 94/100\n",
+      "24/24 [==============================] - 0s 737us/step - loss: 0.0857 - accuracy: 1.0000\n",
+      "Epoch 95/100\n",
+      "24/24 [==============================] - 0s 744us/step - loss: 0.0844 - accuracy: 1.0000\n",
+      "Epoch 96/100\n",
+      "24/24 [==============================] - 0s 780us/step - loss: 0.0830 - accuracy: 1.0000\n",
+      "Epoch 97/100\n",
+      "24/24 [==============================] - 0s 892us/step - loss: 0.0817 - accuracy: 1.0000\n",
+      "Epoch 98/100\n",
+      "24/24 [==============================] - 0s 792us/step - loss: 0.0804 - accuracy: 1.0000\n",
+      "Epoch 99/100\n",
+      "24/24 [==============================] - 0s 736us/step - loss: 0.0792 - accuracy: 1.0000\n",
+      "Epoch 100/100\n",
+      "24/24 [==============================] - 0s 866us/step - loss: 0.0779 - accuracy: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit the model to the training data\n",
+    "fit_model = nn_model.fit(X_train_scaled, y_train, epochs=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e1b7d5b",
    "metadata": {},
    "outputs": [],
    "source": []
