--- a/RandomForest_DeepLearning.ipynb
+++ b/RandomForest_DeepLearning.ipynb
@@ -767,8 +767,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "24143ac4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove loan status target from features data\n",
+    "y = loans_df.Loan_Status_Fully_Paid\n",
+    "X = loans_df.drop(columns=[\"Loan_Status_Fully_Paid\",\"Loan_Status_Not_Paid\"])\n",
+    "\n",
+    "# Split training/test datasets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42, stratify=y)\n",
+    "\n",
+    "# Create a StandardScaler instance\n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Fit the StandardScaler\n",
+    "X_scaler = scaler.fit(X_train)\n",
+    "\n",
+    "# Scale the data\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8c79d5d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Random forest predictive accuracy: 0.849\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a random forest classifier.\n",
+    "rf_model = RandomForestClassifier(n_estimators=128, random_state=78)\n",
+    "\n",
+    "# Fitting the model\n",
+    "rf_model = rf_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "y_pred = rf_model.predict(X_test_scaled)\n",
+    "print(f\" Random forest predictive accuracy: {accuracy_score(y_test,y_pred):.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "27516f70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "854/854 [==============================] - 1s 835us/step - loss: 0.4457 - accuracy: 0.8120\n",
+      "Epoch 2/50\n",
+      "854/854 [==============================] - 1s 882us/step - loss: 0.3861 - accuracy: 0.8494\n",
+      "Epoch 3/50\n",
+      "854/854 [==============================] - 1s 845us/step - loss: 0.3817 - accuracy: 0.8494\n",
+      "Epoch 4/50\n",
+      "854/854 [==============================] - 1s 766us/step - loss: 0.3795 - accuracy: 0.8495\n",
+      "Epoch 5/50\n",
+      "854/854 [==============================] - 1s 800us/step - loss: 0.3781 - accuracy: 0.8499\n",
+      "Epoch 6/50\n",
+      "854/854 [==============================] - 1s 847us/step - loss: 0.3770 - accuracy: 0.8499\n",
+      "Epoch 7/50\n",
+      "854/854 [==============================] - 1s 784us/step - loss: 0.3763 - accuracy: 0.8497\n",
+      "Epoch 8/50\n",
+      "854/854 [==============================] - 1s 825us/step - loss: 0.3758 - accuracy: 0.8500\n",
+      "Epoch 9/50\n",
+      "854/854 [==============================] - 1s 771us/step - loss: 0.3742 - accuracy: 0.8501\n",
+      "Epoch 10/50\n",
+      "854/854 [==============================] - 1s 772us/step - loss: 0.3738 - accuracy: 0.8500\n",
+      "Epoch 11/50\n",
+      "854/854 [==============================] - 1s 813us/step - loss: 0.3733 - accuracy: 0.8499\n",
+      "Epoch 12/50\n",
+      "854/854 [==============================] - 1s 780us/step - loss: 0.3728 - accuracy: 0.8504\n",
+      "Epoch 13/50\n",
+      "854/854 [==============================] - 1s 813us/step - loss: 0.3718 - accuracy: 0.8505\n",
+      "Epoch 14/50\n",
+      "854/854 [==============================] - 1s 818us/step - loss: 0.3719 - accuracy: 0.8503\n",
+      "Epoch 15/50\n",
+      "854/854 [==============================] - 1s 779us/step - loss: 0.3712 - accuracy: 0.8503\n",
+      "Epoch 16/50\n",
+      "854/854 [==============================] - 1s 789us/step - loss: 0.3710 - accuracy: 0.8505\n",
+      "Epoch 17/50\n",
+      "854/854 [==============================] - 1s 811us/step - loss: 0.3702 - accuracy: 0.8506\n",
+      "Epoch 18/50\n",
+      "854/854 [==============================] - 1s 802us/step - loss: 0.3702 - accuracy: 0.8506\n",
+      "Epoch 19/50\n",
+      "854/854 [==============================] - 1s 784us/step - loss: 0.3696 - accuracy: 0.8508\n",
+      "Epoch 20/50\n",
+      "854/854 [==============================] - 1s 779us/step - loss: 0.3690 - accuracy: 0.8506\n",
+      "Epoch 21/50\n",
+      "854/854 [==============================] - 1s 773us/step - loss: 0.3683 - accuracy: 0.8511\n",
+      "Epoch 22/50\n",
+      "854/854 [==============================] - 1s 792us/step - loss: 0.3683 - accuracy: 0.8512\n",
+      "Epoch 23/50\n",
+      "854/854 [==============================] - 1s 822us/step - loss: 0.3678 - accuracy: 0.8514\n",
+      "Epoch 24/50\n",
+      "854/854 [==============================] - 1s 809us/step - loss: 0.3672 - accuracy: 0.8513\n",
+      "Epoch 25/50\n",
+      "854/854 [==============================] - 1s 773us/step - loss: 0.3671 - accuracy: 0.8511\n",
+      "Epoch 26/50\n",
+      "854/854 [==============================] - 1s 790us/step - loss: 0.3667 - accuracy: 0.8512\n",
+      "Epoch 27/50\n",
+      "854/854 [==============================] - 1s 799us/step - loss: 0.3664 - accuracy: 0.8512\n",
+      "Epoch 28/50\n",
+      "854/854 [==============================] - 1s 861us/step - loss: 0.3661 - accuracy: 0.8517\n",
+      "Epoch 29/50\n",
+      "854/854 [==============================] - 1s 846us/step - loss: 0.3657 - accuracy: 0.8520\n",
+      "Epoch 30/50\n",
+      "854/854 [==============================] - 1s 826us/step - loss: 0.3653 - accuracy: 0.8516\n",
+      "Epoch 31/50\n",
+      "854/854 [==============================] - 1s 821us/step - loss: 0.3647 - accuracy: 0.8518\n",
+      "Epoch 32/50\n",
+      "854/854 [==============================] - 1s 844us/step - loss: 0.3644 - accuracy: 0.8517\n",
+      "Epoch 33/50\n",
+      "854/854 [==============================] - 1s 858us/step - loss: 0.3643 - accuracy: 0.8513\n",
+      "Epoch 34/50\n",
+      "854/854 [==============================] - 1s 809us/step - loss: 0.3640 - accuracy: 0.8516\n",
+      "Epoch 35/50\n",
+      "854/854 [==============================] - 1s 861us/step - loss: 0.3637 - accuracy: 0.8518\n",
+      "Epoch 36/50\n",
+      "854/854 [==============================] - 1s 862us/step - loss: 0.3635 - accuracy: 0.8512\n",
+      "Epoch 37/50\n",
+      "854/854 [==============================] - 1s 792us/step - loss: 0.3627 - accuracy: 0.8523\n",
+      "Epoch 38/50\n",
+      "854/854 [==============================] - 1s 794us/step - loss: 0.3630 - accuracy: 0.8512\n",
+      "Epoch 39/50\n",
+      "854/854 [==============================] - 1s 777us/step - loss: 0.3623 - accuracy: 0.8523\n",
+      "Epoch 40/50\n",
+      "854/854 [==============================] - 1s 771us/step - loss: 0.3620 - accuracy: 0.8524\n",
+      "Epoch 41/50\n",
+      "854/854 [==============================] - 1s 816us/step - loss: 0.3617 - accuracy: 0.8525\n",
+      "Epoch 42/50\n",
+      "854/854 [==============================] - 1s 775us/step - loss: 0.3615 - accuracy: 0.8526\n",
+      "Epoch 43/50\n",
+      "854/854 [==============================] - 1s 792us/step - loss: 0.3613 - accuracy: 0.8520\n",
+      "Epoch 44/50\n",
+      "854/854 [==============================] - 1s 910us/step - loss: 0.3606 - accuracy: 0.8530\n",
+      "Epoch 45/50\n",
+      "854/854 [==============================] - 1s 836us/step - loss: 0.3606 - accuracy: 0.8523\n",
+      "Epoch 46/50\n",
+      "854/854 [==============================] - 1s 768us/step - loss: 0.3601 - accuracy: 0.8529\n",
+      "Epoch 47/50\n",
+      "854/854 [==============================] - 1s 780us/step - loss: 0.3604 - accuracy: 0.8525\n",
+      "Epoch 48/50\n",
+      "854/854 [==============================] - 1s 794us/step - loss: 0.3600 - accuracy: 0.8525\n",
+      "Epoch 49/50\n",
+      "854/854 [==============================] - 1s 792us/step - loss: 0.3598 - accuracy: 0.8524\n",
+      "Epoch 50/50\n",
+      "854/854 [==============================] - 1s 794us/step - loss: 0.3597 - accuracy: 0.8529\n",
+      "285/285 - 0s - loss: 0.3910 - accuracy: 0.8438\n",
+      "Loss: 0.39101412892341614, Accuracy: 0.8438392281532288\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the model - deep neural net\n",
+    "number_input_features = len(X_train_scaled[0])\n",
+    "hidden_nodes_layer1 =  24\n",
+    "hidden_nodes_layer2 = 12\n",
+    "\n",
+    "nn = tf.keras.models.Sequential()\n",
+    "\n",
+    "# First hidden layer\n",
+    "nn.add(\n",
+    "    tf.keras.layers.Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\")\n",
+    ")\n",
+    "\n",
+    "# Second hidden layer\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n",
+    "\n",
+    "# Output layer\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
+    "\n",
+    "# Compile the Sequential model together and customize metrics\n",
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+    "\n",
+    "# Train the model\n",
+    "fit_model = nn.fit(X_train_scaled, y_train, epochs=50)\n",
+    "\n",
+    "# Evaluate the model using the test data\n",
+    "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
+    "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20f583ec",
    "metadata": {},
    "outputs": [],
    "source": []
